# snake-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md
include/: Entity.hpp  Game.hpp  Menu.hpp  MenuItem.hpp  Player.hpp  PlayerPart.hpp  Point.hpp  Render.hpp  State.hpp  StateMenu.hpp  StatePlaying.hpp  entity.hpp  game.hpp  player.hpp  point.hpp  render.hpp
include/Entities/: Apple.hpp  Entity.hpp  Player.hpp  PlayerPart.hpp
include/Event/: Event.hpp  MenuEventArgs.hpp  Observer.hpp  Subject.hpp
include/Menu/: Menu.hpp  MenuEvent.hpp  MenuItem.hpp
include/Player/: Player.hpp  PlayerPart.hpp
include/Render/: Render.hpp  Window.hpp
include/Renderer/: IWindow.hpp  Renderer.hpp  Subwindow.hpp  Window.hpp
include/State/: Callback.hpp  Observer.hpp  State.hpp  StateMenu.hpp  StateMenuBuilder.hpp  StatePause.hpp  StatePlaying.hpp  Subject.hpp
include/State/Menu/: MainMenu.hpp  SettingsDialog.hpp
include/Util/: Point.hpp  Render.hpp
src/: CMakeLists.txt  Game.cpp  Menu.cpp  MenuItem.cpp  Player.cpp  PlayerPart.cpp  Point.cpp  Render.cpp  StateMenu.cpp  StatePlaying.cpp  game.cpp  main.cpp  player.cpp  point.cpp  render.cpp
src/Entities/: Apple.cpp  Player.cpp  PlayerPart.cpp
src/Event/: MenuEventArgs.cpp  Subject.cpp
src/Menu/: Menu.cpp  MenuItem.cpp
src/Player/: Player.cpp  PlayerPart.cpp
src/Render/: Render.cpp  Window.cpp
src/Renderer/: Renderer.cpp  Subwindow.cpp  Window.cpp
src/State/: Callback.cpp  StateMenu.cpp  StateMenuBuilder.cpp  StatePause.cpp  StatePlaying.cpp  Subject.cpp
src/State/Menu/: MainMenu.cpp  SettingsDialog.cpp
src/Util/: Point.cpp  Render.cpp
tests/: CMakeLists.txt  test_Menu.cpp  test_Player.cpp  test_Point.cpp  test_Window.cpp
